# rentsy-mcp

./: .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.json  handover.md  pyproject.toml  render.yaml  supabase_schema.sql
frontend/: index.html  mcp-app.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BookingModal.jsx  CategoryBar.jsx  CategoryStrip.jsx  Footer.jsx  ProductCard.jsx  ProductGrid.jsx  ProductModal.jsx  StatsBar.jsx
scraped_data/: stores.json
scripts/: .heartbeat  activity_commit.py  scrape_rentsy.py  scrape_rentsy_fast.py  scrape_rentsy_mass.py  seed_demo_data.py  setup_and_seed.py
src/: app.py  server.py
src/db/: connection.py  models.py  queries.py
src/engine/: pricing.py  search.py
src/scraper/: listing_scraper.py  parsers.py  product_scraper.py  rate_limiter.py  runner.py
src/utils/: constants.py  formatters.py  renderers.py  validators.py
